--- a/client/src/styles/cards.scss
+++ b/client/src/styles/cards.scss
@@ -5,8 +5,6 @@
     display: flex;
     -ms-flex-direction: column;
     flex-direction: column;
-    min-width: 300px;
-    max-width: 300px;
     word-wrap: break-word;
     background-color: #fff;
     background-clip: border-box;
@@ -18,17 +16,18 @@
     img{
         width: 125px;
     }
+    
 }
 
 .card__group {
     display: flex;
     -ms-flex-flow: row wrap;
     flex-flow: row wrap;
-    width: 800px;
     margin: 0 auto;
     justify-content: center;
 }
 
 .card__bird-list{
-    height: 350px
+    height: 20em;
+    width: 15em;
 }
