--- a/client/src/styles/map.scss
+++ b/client/src/styles/map.scss
@@ -1,7 +1,7 @@
 .leaflet-container {
   margin: 0 auto;
-  width: 800px;
-  height: 400px;
+  width:  100%;
+  height:  30em;
 }
 
 
@@ -9,8 +9,8 @@
 .leaflet-popup-content-wrapper {
   display: flex;
   justify-content: center;
-  width: 800px;
-  height: 400px;
+  width:  15em;
+  height:  5em;
   img {
     width: 100px;
     height: 100px;
