--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -2,89 +2,87 @@
 @import 'map';
 @import 'forms';
 @import 'cards';
-
+@import 'search';
 * {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 body {
-  max-width: 100%;
-  margin: 0 auto;
-  padding: 0 1em;
-  font-family: $font-body;
-  line-height: 1.5;
-  text-align: center;
+    max-width: 100%;
+    margin: 0 auto;
+    padding: 0 1em;
+    font-family: $font-body;
+    line-height: 1.5;
+    text-align: center;
 }
 
 main {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  margin: 0 auto;
-  div {
-    padding: 5px, 5px;
-    margin-bottom: 20px;
-  }
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: 0 auto;
+    div {
+        padding: 5px, 5px;
+        margin-bottom: 20px;
+    }
 }
 
-h1{
+h1 {
     margin: 0 auto;
 }
 
 .navbar {
-  display: flex;
-  align-items: center;
-  margin-bottom: 1em;
-  margin: 0 auto;
-  font-size: 0.85em;
-  max-width: 60em;
-  a {
-    text-decoration: none;
-    color: inherit;
-  }
-  a,
-  button {
-    display: inline-flex;
-    padding: 1em 0;
-    margin-right: 1em;
-    &:last-child {
-      margin-right: 0;
+    display: flex;
+    align-items: center;
+    margin-bottom: 1em;
+    margin: 0 auto;
+    font-size: 0.85em;
+    max-width: 60em;
+    a {
+        text-decoration: none;
+        color: inherit;
     }
-  }
-  button {
-    margin-bottom: 0;
-  }
-  & > div {
-    margin-left: auto;
-  }
+    a,
+    button {
+        display: inline-flex;
+        padding: 1em 0;
+        margin-right: 1em;
+        &:last-child {
+            margin-right: 0;
+        }
+    }
+    button {
+        margin-bottom: 0;
+    }
+    &>div {
+        margin-left: auto;
+    }
 }
 
 .container--home {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  a{
-    text-decoration: none;
-    color: inherit;
-}
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    a {
+        text-decoration: none;
+        color: inherit;
+    }
 }
 
 .two-column-box {
-  display: flex;
-  align-items: center;
-  padding: 50px 50px;
-  justify-content: space-around;
-  flex-direction: row;
-  flex-flow: row wrap;
-  max-width: 60em;
+    display: flex;
+    align-items: center;
+    padding: 50px 50px;
+    justify-content: space-around;
+    flex-direction: row;
+    flex-flow: row wrap;
+    max-width: 60em;
 }
 
-.bird-item__details{
+.bird-item__details {
     font-size: 0.8em;
 }
 
-.single-bird__img{
+.single-bird__img {
     max-width: 80%;
 }
-
-
