--- a/client/src/styles/search.scss
+++ b/client/src/styles/search.scss
@@ -1,3 +1,14 @@
+.container--search {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    a {
+        text-decoration: none;
+        color: inherit;
+    }
+}
+
 .search,
 .search__bird-list {
     position: relative;
@@ -32,6 +43,13 @@ main div {
     flex-direction: column;
     align-items: center;
     margin: 0 auto;
+    border: solid 1px black;
+    height: 400px;
+    overflow: auto;
+    position: relative;
+    margin-bottom: 0;
+    height: 300px;
+    z-index: 99;
 }
 
 .search__bird-list {
@@ -46,4 +64,11 @@ main div {
         margin-block-end: 0;
         margin-block-start: 0;
     }
+}
+
+.searchbar {
+    position: relative;
+    margin-bottom: 0;
+    height: 30px;
+    // z-index: 10;
 }
