selected item displays on Search component

--- a/client/src/styles/search.scss
+++ b/client/src/styles/search.scss
@@ -52,6 +52,10 @@ main div {
     z-index: 99;
 }
 
+.isSelected {
+    background: green;
+}
+
 .search__bird-list {
     // height: 20em;
     width: 20em;
