--- a/client/src/styles/search.scss
+++ b/client/src/styles/search.scss
@@ -3,6 +3,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
     a {
         text-decoration: none;
         color: inherit;
@@ -31,6 +32,10 @@
     }
     div {
         margin-bottom: 0;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-end;
+        justify-content: space-between;
     }
 }
 
@@ -57,7 +62,7 @@ main div {
 }
 
 .search__bird-list {
-    // height: 20em;
+    height: 5em;
     width: 20em;
 }
 
@@ -72,7 +77,14 @@ main div {
 
 .searchbar {
     position: relative;
-    margin-bottom: 0;
+    margin-bottom: 25px;
     height: 30px;
     // z-index: 10;
+}
+
+.selected-item {
+    border: solid 1px #57880b;
+    padding: 10px;
+    /* margin: 1em; */
+    background: #adff2f1f;
 }
