--- a/client/src/styles/map.scss
+++ b/client/src/styles/map.scss
@@ -1,7 +1,15 @@
 .leaflet-container {
   margin: 0 auto;
-  width: 100%;
+  width: 80%;
   height: 30em;
+  margin-top: 2em;
+}
+
+.small-map {
+  margin: 0 auto;
+  width: 80%;
+  height: 30em;
+  margin-top: 2em;
 }
 
 .bird_popup,
