--- a/client/src/components/Carousel/Carousel.scss
+++ b/client/src/components/Carousel/Carousel.scss
@@ -39,27 +39,24 @@
         flex-grow: 1;
     }
     
-    .left-arrow,
-    .right-arrow {
-        position: absolute;
-        z-index: 100;
-        top: 50%;
-        transform: translateY(-50%);
-        width: 48px;
-        height: 48px;
-        border-radius: 24px;
-        background-color: white;
-        border: 1px solid #ddd;
-    }
-    
-    .left-arrow {
-        left: 24px;
-    }
-    
-    .right-arrow {
-        right: 24px;
-    }
-    
+    // .left-arrow,
+    // .right-arrow {
+    //     position: absolute;
+    //     z-index: 100;
+    //     top: 50%;
+    //     transform: translateY(-50%);
+    //     width: 48px;
+    //     height: 48px;
+    //     border-radius: 24px;
+    //     background-color: white;
+    //     border: 1px solid #ddd;
+    // }
+    // .left-arrow {
+    //     left: 24px;
+    // }
+    // .right-arrow {
+    //     right: 24px;
+    // }
     .carousel-content.show-1>* {
         width: 100%;
     }
