--- a/client/src/components/Carousel/Carousel.scss
+++ b/client/src/components/Carousel/Carousel.scss
@@ -2,7 +2,7 @@
         width: 100%;
         display: flex;
         flex-direction: column;
-        margin: 2em 0;
+        margin: 2em 0 0;
     }
     
     .carousel-wrapper {
@@ -125,6 +125,7 @@
     .carousel-item__details {
         padding: 0 5px;
         text-align: left;
+        margin-bottom: 0;
         h3 {
             font-size: 1em;
             margin: 0
