--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -2,6 +2,7 @@
 @import 'forms';
 @import 'cards';
 @import 'search';
+@import "~bootstrap/scss/bootstrap";
 * {
     box-sizing: border-box;
 }
@@ -9,7 +10,7 @@
 body {
     max-width: 100%;
     margin: 0 auto;
-    padding: 0 1em;
+    // padding: 0 1em;
     font-family: $font-body;
     line-height: 1.5;
     text-align: center;
@@ -30,34 +31,33 @@ h1 {
     margin: 0 auto;
 }
 
-.navbar {
-    display: flex;
-    align-items: center;
-    margin-bottom: 1em;
-    margin: 0 auto;
-    font-size: 0.85em;
-    max-width: 60em;
-    a {
-        text-decoration: none;
-        color: inherit;
-    }
-    a,
-    button {
-        display: inline-flex;
-        padding: 1em 0;
-        margin-right: 1em;
-        &:last-child {
-            margin-right: 0;
-        }
-    }
-    button {
-        margin-bottom: 0;
-    }
-    &>div {
-        margin-left: auto;
-    }
-}
-
+// .navbar {
+//     display: flex;
+//     align-items: center;
+//     margin-bottom: 1em;
+//     margin: 0 auto;
+//     font-size: 0.85em;
+//     max-width: 60em;
+//     a {
+//         text-decoration: none;
+//         color: inherit;
+//     }
+//     a,
+//     button {
+//         display: inline-flex;
+//         padding: 1em 0;
+//         margin-right: 1em;
+//         &:last-child {
+//             margin-right: 0;
+//         }
+//     }
+//     button {
+//         margin-bottom: 0;
+//     }
+//     &>div {
+//         margin-left: auto;
+//     }
+// }
 .container--home {
     display: flex;
     flex-direction: column;
