Sign Up and Jumbotron

--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -2,6 +2,7 @@
 @import 'forms';
 @import 'cards';
 @import 'search';
+@import 'jumbotron';
 @import "~bootstrap/scss/bootstrap";
 * {
     box-sizing: border-box;
