--- a/client/src/components/Map/map.scss
+++ b/client/src/components/Map/map.scss
@@ -24,6 +24,6 @@
 
 .mapContainer {
     width: 100%;
-    border: solid 1px #c9c9c9;
-    border-radius: 1em;
+    // border: solid 1px #c9c9c9;
+    // border-radius: 1em;
 }
