--- a/client/src/styles/variables.scss
+++ b/client/src/styles/variables.scss
@@ -1,14 +1,41 @@
 @import url('https://fonts.googleapis.com/css?family=Muli');
 * {
-  &,
-  &:before,
-  &:after {
-    box-sizing: border-box;
-  }
+    &,
+    &:before,
+    &:after {
+        box-sizing: border-box;
+    }
 }
 
-$font-body: -apple-system, BlinkMacSystemFont,'Muli', Helvetica, Arial, sans-serif;
-$font-sans: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-$grey: hsl(0, 0, 90%);
-$green: rgb(89, 228, 112);
-
+$font-body: -apple-system,
+BlinkMacSystemFont,
+'Muli',
+Helvetica,
+Arial,
+sans-serif;
+$font-sans: 'Helvetica Neue',
+Helvetica,
+Arial,
+sans-serif;
+$grey: hsl(0,
+0,
+90%);
+$green: rgb(89,
+228,
+112);
+$purple-gradient: linear-gradient(45deg,
+rgba(87, 29, 146, 1) 0%,
+rgba(172, 25, 102, 1) 100%);
+$purple-gradient: linear-gradient(to bottom right,
+#C90A6D,
+#FF48A0);
+$blue1-gradient: linear-gradient(to bottom right,
+#5E5AEC,
+#3F9EFC);
+$blue2-gradient: linear-gradient(to bottom right,
+#6452E9,
+#639FF9);
+$shadow: 0 13px 26px rgba(#000,
+.2),
+0 3px 6px rgba(#000,
+.2);
