Add Observation styled

--- a/client/src/styles/forms.scss
+++ b/client/src/styles/forms.scss
@@ -1,21 +1,16 @@
-.log-in-box{
-    width: 400px;
-}
-
-.form__a{
-    text-decoration:underline;
-    color: inherit;
-
-}
-
-label,
-input{
-  display: block;
-  margin: 0 auto;
-  text-align: center;
-
-}
-
-input, select {
-    margin-bottom: 20px;
-}
+// .log-in-box{
+//     width: 400px;
+// }
+// .form__a{
+//     text-decoration:underline;
+//     color: inherit;
+// }
+// label,
+// input{
+//   display: block;
+//   margin: 0 auto;
+//   text-align: center;
+// }
+// input, select {
+//     margin-bottom: 20px;
+// }
