--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -59,6 +59,10 @@ h1 {
 //         margin-left: auto;
 //     }
 // }
+.display-none {
+    display: none
+}
+
 .container--home {
     display: flex;
     flex-direction: column;
