--- a/client/src/views/IndividualProfile.scss
+++ b/client/src/views/IndividualProfile.scss
@@ -41,7 +41,7 @@ $shadow: 0 13px 26px rgba(#000, .2),
         margin-left: auto;
         margin-right: auto;
         margin-bottom: 1.5em;
-        border-radius: 100%;
+        // border-radius: 100%;
         box-shadow: $shadow;
     }
 }
