--- a/client/src/components/Slider/Slider.scss
+++ b/client/src/components/Slider/Slider.scss
@@ -2,7 +2,7 @@
         width: 100%;
         display: flex;
         flex-direction: column;
-        margin: 2em 0;
+        margin: 2em 0 1em;
     }
     
     .slider-pictures {
@@ -11,6 +11,7 @@
         position: relative;
         height: 20em;
         width: 100%;
+        margin: 0.5em 0 0.3em;
         & img {
             object-fit: cover;
             width: 100%;
