--- a/client/src/components/Carousel/Carousel.scss
+++ b/client/src/components/Carousel/Carousel.scss
@@ -100,20 +100,42 @@
         }
     }
     
-    .card__carousel-list.post {
-        justify-content: center;
-        align-items: center;
+    .card__carousel-list-post {
+        // height: 20em;
+        // width: 15em;
+        position: relative;
+        display: -ms-flexbox;
+        display: flex;
+        -ms-flex-direction: column;
+        flex-direction: column;
+        word-wrap: break-word;
+        background-color: #fff;
+        background-clip: border-box;
+        border-radius: 2px;
+        margin: calc(100%/15);
+        // border: 1px solid grey;
+        justify-content: flex-start;
+        img {
+            width: 100%;
+            height: 120px;
+            object-fit: cover;
+            border-radius: 1em;
+        }
     }
     
+    // .card__carousel-list.post {
+    //     justify-content: center;
+    //     align-items: center;
+    // }
     .post {
         img {
             filter: url('#teal-white') opacity(0.43) grayscale(0.3) contrast(1.7) brightness(0.7) saturate(0.6);
             // filter: grayscale(1);
             // filter: saturate(0.2);
-            width: 100%;
+            // width: 100%;
             // height: 15em;
             object-fit: cover;
-            border-radius: 50%;
+            // border-radius: 50%;
         }
     }
     
@@ -172,6 +194,7 @@
         text-transform: uppercase;
         strong {
             font-size: 0.85em;
+            color: black;
         }
     }
     
