streched images fixed on profile and navbar, logo updated

--- a/client/src/views/IndividualProfile.scss
+++ b/client/src/views/IndividualProfile.scss
@@ -43,5 +43,6 @@ $shadow: 0 13px 26px rgba(#000, .2),
         margin-bottom: 1.5em;
         border-radius: 100%;
         box-shadow: $shadow;
+        object-fit: cover;
     }
 }
